# Aframp-backend

./: .env.example  ANALYTICS_IMPLEMENTATION.md  ANALYTICS_TEST_VERIFICATION.md  CIRCUIT_BREAKER_README.md  CI_CD.md  COMMIT_SUMMARY.md  CREATE_PULL_REQUEST.md  Cargo.toml  DATABASE_SCALING_ARCHITECTURE.md  DATABASE_SCALING_DELIVERY_SUMMARY.md  DATABASE_SCALING_IMPLEMENTATION_GUIDE.md  DATABASE_SCALING_QUICKSTART.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FINAL_VERIFICATION.md  GIT_PUSH_SUCCESS.md  IMPLEMENTATION_COMPLETE_OPERATIONS.md  IMPLEMENTATION_SUMMARY.md  KYC_IMPLEMENTATION_SUMMARY.md  MERGE_SUMMARY.md  MICROSERVICE_AUTH_IMPLEMENTATION.md  MICROSERVICE_AUTH_QUICK_START.md  ONRAMP_STATUS_IMPLEMENTATION.md  ONRAMP_STATUS_QUICK_REFERENCE.md  OPERATIONS_INDEX.md  OPERATIONS_VISUAL_SUMMARY.txt  PANIC_PRONE_FIXES.md  PRODUCTION_OPERATIONS_PLAN.md  PULL_REQUEST.md  PUSH_INSTRUCTIONS.md  README_OPERATIONS.md  README_SERVICE_AUTH.md  REDEMPTION_IMPLEMENTATION.md  RUNBOOKS.md  STELLAR_THROUGHPUT_OPTIMIZATION.md  TEST_RESULTS.md  TEST_STATUS.md  TEST_VERIFICATION.md  TEST_VERIFICATION_REPORT.md  TODO.md  (+6 more)
.github/: dependabot.yml
alerting/: service_auth_alerts.yml
db/: mint_approval_schema.sql
docs/: ANALYTICS_QUICK_START.md  CONSUMER_ANALYTICS.md  NOTIFICATION_SETUP.md  OPERATIONS_QUICKSTART.md  PRODUCTION_OPERATIONS.md  (+2 more)
tools/db_infra/: Cargo.toml  README.md  docker-compose.test.yml
tools/db_infra/migrations/: 001_create_shards.sql
tools/db_infra/src/: admin.rs  db.rs  main.rs  metrics.rs  shard_locator.rs
tools/db_infra/tests/: shard_locator_tests.rs
(+419 files in other folders)
