[package]
name = "db_infra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.22"
metrics-exporter-prometheus = "0.10"
crc32fast = "1.3"
anyhow = "1.0"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }

[workspace]

